--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "chainlit>=2.9.2",
     "docling>=2.64.0",
+    "huggingface_hub>=0.20.0",
     "httpx>=0.28.1",
     "loguru>=0.7.3",
     "pandas>=2.3.3",
