--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,14 @@ dependencies = [
     "httpx>=0.28.1",
     "loguru>=0.7.3",
     "pandas>=2.3.3",
-    "psycopg2>=2.9.11",
     "pyarrow>=22.0.0",
     "python-dotenv>=1.2.1",
     "torch>=2.9.1",
     "transformers>=4.57.3",
+    "ragas>=0.4.1",
+    "langchain>=1.1.3",
+    "langchain-mistralai>=1.1.1",
+    "langchain-ollama>=1.0.1",
+    "mistralai>=1.9.11",
+    "psycopg2-binary>=2.9.11",
 ]
