--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,9 @@ dependencies = [
     "python-dotenv>=1.2.1",
     "torch>=2.9.1",
     "transformers>=4.57.3",
-    "ragas>=0.4.1",
     "langchain>=1.1.3",
-    "langchain-mistralai>=1.1.1",
     "langchain-ollama>=1.0.1",
-    "mistralai>=1.9.11",
     "psycopg2-binary>=2.9.11",
+    "instructor>=1.13.0",
+    "deepeval>=3.7.6",
 ]
